[gd_scene load_steps=18 format=3 uid="uid://b01nsjmmrjijr"]

[ext_resource type="Script" uid="uid://cdcjde3jouur8" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://bxo48am8yhnno" path="res://player/components/player_component_horizontal_movement.gd" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://bknyxylsjojuo" path="res://player/components/player_component_thrusting.gd" id="3_yw30f"]
[ext_resource type="PackedScene" uid="uid://bjxt3vpmdgo" path="res://player/assets/walk swim.fbx" id="4_yw30f"]
[ext_resource type="AudioStream" uid="uid://mwlqx011ws88" path="res://audio/sfx/FrogLandsinWater.mp3" id="6_hg6s5"]
[ext_resource type="AudioStream" uid="uid://gyvfsjxk131f" path="res://audio/sfx/FrogSwim.mp3" id="8_2ieo8"]
[ext_resource type="AudioStream" uid="uid://dvu77iycwxtkk" path="res://audio/sfx/FrogDeflateCropped.mp3" id="8_hg6s5"]

[sub_resource type="SphereMesh" id="SphereMesh_kqu6x"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oul6g"]
radius = 0.67221236

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qjkh3"]
spread = 180.0
initial_velocity_max = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yw30f"]

[sub_resource type="SphereMesh" id="SphereMesh_g6k8r"]
material = SubResource("StandardMaterial3D_yw30f")
radius = 0.2
height = 0.4

[sub_resource type="BoxShape3D" id="BoxShape3D_g1dw6"]
size = Vector3(1.7556152, 4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_yw30f"]
size = Vector3(1.7556152, 5.0161133, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g1dw6"]
direction = Vector3(-1, 0, 0)
spread = 97.941
flatness = 1.0
initial_velocity_min = 8.45
initial_velocity_max = 10.0
gravity = Vector3(0, -2, 0)
scale_min = 0.29999998
scale_max = 1.92

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g6k8r"]
transparency = 1
albedo_color = Color(0.35, 0.22108333, 0.12250001, 0.34901962)

[sub_resource type="SphereMesh" id="SphereMesh_yw30f"]
material = SubResource("StandardMaterial3D_g6k8r")

[node name="Player" type="CharacterBody3D"]
collision_mask = 16
script = ExtResource("1_oul6g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_kqu6x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_oul6g")

[node name="PCHorizontalMovement" type="Node" parent="."]
script = ExtResource("2_g1dw6")
ground_movement_speed = 20
sky_movement_speed = 15
water_movement_speed = 5
metadata/_custom_type_script = "uid://bxo48am8yhnno"

[node name="PCThrusting" type="Node" parent="."]
script = ExtResource("3_yw30f")
force = 12
metadata/_custom_type_script = "uid://bknyxylsjojuo"

[node name="ExplodeVFX" type="GPUParticles3D" parent="."]
emitting = false
amount = 35
explosiveness = 0.7
process_material = SubResource("ParticleProcessMaterial_qjkh3")
draw_pass_1 = SubResource("SphereMesh_g6k8r")

[node name="WaterDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0022278, 0)
shape = SubResource("BoxShape3D_g1dw6")

[node name="WaterDetector2" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterDetector2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4941711, 0)
shape = SubResource("BoxShape3D_yw30f")

[node name="walk swim" parent="." instance=ExtResource("4_yw30f")]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, -0.64020485, 0)

[node name="ThrustingVFX" type="GPUParticles3D" parent="walk swim"]
transform = Transform3D(-8.7422784e-11, 0, -0.002, 0, 0.002, 0, 0.002, 0, -8.7422784e-11, 9.418586e-10, 0.014734566, -0.02154721)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_g1dw6")
draw_pass_1 = SubResource("SphereMesh_yw30f")

[node name="FrogLandsinWater" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hg6s5")

[node name="FrogStep2" type="AudioStreamPlayer" parent="."]

[node name="FrogSwim" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2ieo8")

[node name="FrogDeflate" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hg6s5")
volume_db = -10.0

[connection signal="area_entered" from="WaterDetector2" to="." method="_on_water_detector_2_area_entered"]
